docs/0.18/_sources/api/gammapy.maps.MapAxis.rst.txt
MapAxis
=======

.. currentmodule:: gammapy.maps

.. autoclass:: MapAxis
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~MapAxis.bin_width
      ~MapAxis.center
      ~MapAxis.edges
      ~MapAxis.interp
      ~MapAxis.is_energy_axis
      ~MapAxis.name
      ~MapAxis.nbin
      ~MapAxis.nbin_per_decade
      ~MapAxis.node_type
      ~MapAxis.unit

   .. rubric:: Methods Summary

   .. autosummary::

      ~MapAxis.append
      ~MapAxis.coord_to_idx
      ~MapAxis.coord_to_pix
      ~MapAxis.copy
      ~MapAxis.downsample
      ~MapAxis.from_bounds
      ~MapAxis.from_edges
      ~MapAxis.from_energy_bounds
      ~MapAxis.from_energy_edges
      ~MapAxis.from_nodes
      ~MapAxis.from_stack
      ~MapAxis.from_table
      ~MapAxis.from_table_hdu
      ~MapAxis.group_table
      ~MapAxis.is_aligned
      ~MapAxis.pix_to_coord
      ~MapAxis.round
      ~MapAxis.slice
      ~MapAxis.squash
      ~MapAxis.to_header
      ~MapAxis.to_table
      ~MapAxis.to_table_hdu
      ~MapAxis.upsample

   .. rubric:: Attributes Documentation

   .. autoattribute:: bin_width
   .. autoattribute:: center
   .. autoattribute:: edges
   .. autoattribute:: interp
   .. autoattribute:: is_energy_axis
   .. autoattribute:: name
   .. autoattribute:: nbin
   .. autoattribute:: nbin_per_decade
   .. autoattribute:: node_type
   .. autoattribute:: unit

   .. rubric:: Methods Documentation

   .. automethod:: append
   .. automethod:: coord_to_idx
   .. automethod:: coord_to_pix
   .. automethod:: copy
   .. automethod:: downsample
   .. automethod:: from_bounds
   .. automethod:: from_edges
   .. automethod:: from_energy_bounds
   .. automethod:: from_energy_edges
   .. automethod:: from_nodes
   .. automethod:: from_stack
   .. automethod:: from_table
   .. automethod:: from_table_hdu
   .. automethod:: group_table
   .. automethod:: is_aligned
   .. automethod:: pix_to_coord
   .. automethod:: round
   .. automethod:: slice
   .. automethod:: squash
   .. automethod:: to_header
   .. automethod:: to_table
   .. automethod:: to_table_hdu
   .. automethod:: upsample
